--- a/project-1.html
+++ b/project-1.html
@@ -120,7 +120,7 @@
           </div>
           <div class="project-details__content-main">
             <div class="project-details__desc">
-              <h3 class="project-details__content-title">Projetc Overview</h3>
+              <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
                 Chat for Everyone is the app that Everyone can create a chat or many chats, 
                 invite friends, coworkers or business partners for text messaging.
