--- a/index-ru.html
+++ b/index-ru.html
@@ -193,6 +193,39 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
+                src="./assets/jpeg/project-news-blog.jpeg"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">News Blog</h3>
+              <p class="projects__row-content-desc">
+                News Blog - это мой первый Fullstack проект, который я создал 
+                с помощью Nx - интеллектуальной и расширяемой системы сборки проектов, 
+                поддерживающей стратегию разработки приложений на основе монорерозиториев. 
+                В этом проекте я попытался изучить и самостоятельно разработать сервисы 
+                с использованием следующих технологий и механизмов: Rest API, CORS, JWT авторизация и 
+                уведомления о событиях в реальном времени на основе websocket (библиотека socket.io).
+                Основной упор был сделан на разработку Backend части, но для тестирования и демонстрации приложения 
+                было разработано несколько простых компонентов для Frontend части: форма для регистрации пользователя, 
+                страница с перечнем новостей и страница с детальной информацией о новости, 
+                где Вы также можете оставить свой комментарий.
+                Если другой пользователь создаст, отредактирует или удалит комментарий, 
+                то Вы практически сразу будете уведомлены, получив всплывающее уведомление в правом нижнем углу экрана.
+              </p>
+              <a
+                href="./project-3-ru.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Подробнее</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
                 src="./assets/jpeg/project-chat-app.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
@@ -202,7 +235,7 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Chat for Everyone</h3>
               <p class="projects__row-content-desc">
-                Chat for Everyone это приложение, которое позволяет каждому создавать 
+                Chat for Everyone - это приложение, которое позволяет каждому создавать 
                 свой чат или несколько чатов, приглашать друзей, коллег или партнеров по бизнесу 
                 для общения посредством отправки текстовых сообщений.
               </p>
@@ -301,7 +334,7 @@
       <div class="main-container">
         <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
         <div class="main-footer__lower">
-          &copy; Copyright 2022. Thanks
+          &copy; Copyright 2023. Thanks
           <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
             >Ram Maheshwari</a
           >
