--- a/index-ru.html
+++ b/index-ru.html
@@ -154,6 +154,7 @@
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
               <div class="skills__skill">SASS/SCSS</div>
+              <div class="skills__skill">Tailwind</div>
               <div class="skills__skill">JavaScript</div>
               <div class="skills__skill">TypeScript</div>
               <div class="skills__skill">Vue</div>
@@ -165,9 +166,12 @@
               <div class="skills__skill">MSSQL</div>
               <div class="skills__skill">Firebase</div>
               <div class="skills__skill">Node.js</div>
+              <div class="skills__skill">Nest</div>
               <div class="skills__skill">Express</div>
               <div class="skills__skill">Socket.io</div>
               <div class="skills__skill">Pug</div>
+              <div class="skills__skill">Swagger</div>
+              <div class="skills__skill">Nx (build system)</div>
               <div class="skills__skill">C#</div>
               <div class="skills__skill">VBA</div>
               <div class="skills__skill">Figma</div>
