--- a/project-3-ru.html
+++ b/project-3-ru.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" type="image/png" href="./assets/png/my-photo.png"/>
-    <title>Chat for Everyone</title>
+    <title>News Blog</title>
     <meta name="description" content="Страница о проекте News Blog" />
 
     <link rel="stylesheet" href="css/style.css" />
