Correct grammar error

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">News Blog</h3>
               <p class="projects__row-content-desc">
-                News Blog is my first Fullstack project that I've build with Nx
+                News Blog is my first Fullstack project that I've built with Nx
                 is a smart, extensinble build system with monorepo support. In
                 this project I tried to study and create Rest API, CORS
                 settings, JWT authorization and realtime notifications based on
