--- a/project-3.html
+++ b/project-3.html
@@ -127,7 +127,7 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                News Blog is my first Fullstack project that I've build with Nx
+                News Blog is my first Fullstack project that I've built with Nx
                 is a smart, extensinble build system with monorepo support.
               </p>
               <figure>
