Add the desctiption of unit tests (News Blog)

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
               <div class="skills__skill">Socket.io</div>
               <div class="skills__skill">Pug</div>
               <div class="skills__skill">Swagger</div>
+              <div class="skills__skill">Jest (unit test)</div>
               <div class="skills__skill">Nx (build system)</div>
               <div class="skills__skill">C#</div>
               <div class="skills__skill">VBA</div>
