--- a/project-3-ru.html
+++ b/project-3-ru.html
@@ -192,7 +192,8 @@
                 который позволит любому React компоненту выполнить обмен сообщениями с backend частью проекта, 
                 используя средства библиотеки socket.io.<br>
                 Также в разработан компонент Protected Route, 
-                который предоставляет доступ к SPA приложению только авторизованным пользователям.
+                который предоставляет доступ к SPA приложению только авторизованным пользователям.<br>
+                Также добавлены модульные тесты для React компонентов с использованием библиотек Jest + React Testing Library.
               </p>
               <h3 class="project-details__content-title">Размещение проектов</h3>
               <p class="project-details__desc-para">
@@ -214,6 +215,7 @@
                 <div class="skills__skill">TypeScript</div>
                 <div class="skills__skill">React</div>
                 <div class="skills__skill">React Router Dom</div>
+                <div class="skills__skill">Jest + React Testing Library</div>
                 <div class="skills__skill">Nest</div>
                 <div class="skills__skill">Rest API</div>
                 <div class="skills__skill">JWT Authorization</div>
