--- a/project-3.html
+++ b/project-3.html
@@ -174,7 +174,8 @@
                 signup (send a signup request), logout (send a logout request).
                 The useSocket hook contains the context with only one socket instance 
                 that let any React component to exchange messages with the backend using socket.io utilities.<br>
-                The Protected Route component is also designed only authorized users get access to the SPA.
+                The Protected Route component is also designed only authorized users get access to the SPA.<br>
+                Unit tests of React components are also added using Jest and React Testing Library.
               </p>
               <h3 class="project-details__content-title">Deployment</h3>
               <p class="project-details__desc-para">
@@ -197,6 +198,7 @@
                 <div class="skills__skill">TypeScript</div>
                 <div class="skills__skill">React</div>
                 <div class="skills__skill">React Router Dom</div>
+                <div class="skills__skill">Jest + React Testing Library</div>
                 <div class="skills__skill">Nest</div>
                 <div class="skills__skill">Rest API</div>
                 <div class="skills__skill">JWT Authorization</div>
