Add freelance expreience

--- a/index-ru.html
+++ b/index-ru.html
@@ -130,13 +130,14 @@
                 профессиональные навыки для достижения высоких командных результатов.
               </p>
               <p class="about__content-details-para">
-                Завершаю обучение по программе Fullstack Javascript в GeekBrains 
-                (длительность программы - 16 месяцев) и открыт для предложений о&nbsp;работе. 
+                В 2022 году завершил обучение по программе Fullstack Javascript в GeekBrains 
+                (длительность программы - 16 месяцев). В настоящее время для получения опыта работаю на фрилансе и 
+                открыт для предложений о работе. 
                 Мои работы по веб&nbsp;разработке представлены в разделе 
                 <a href="./index-ru.html#projects"><strong>Проекты</strong></a>.
               </p>
               <p class="about__content-details-para">
-                На текущем месте работы одним из направлений является автоматизация рабочих процессов.
+                На основном месте работы одним из направлений является автоматизация рабочих процессов.
                 Пишу на C#, подробнее в резюме на 
                 <a 
                   href="https://novosibirsk.hh.ru/resume/3ae8fb1dff0b0ffefb0039ed1f57716c6b6745"
@@ -190,7 +191,8 @@
           <span class="heading-sec__main">Проекты</span>
           <span class="heading-sec__sub">
             Здесь приведены мои работы по веб разработке, 
-            созданные мною в ходе обучения в&nbsp;GeekBrains и самостоятельного изучения материалов.
+            созданные мною в ходе обучения, а также на основании результатов 
+            выполнения командных проектов на фрилансе.
           </span>
         </h2>
 
