--- a/index.html
+++ b/index.html
@@ -132,16 +132,16 @@
                 team's results.
               </p>
               <p class="about__content-details-para">
-                I'm currently completing the Fullstack Javascript course at
-                GeekBrains (the duration of course is 16 months) and open to new
-                job opportunities. My web development projects are presented in
-                the
+                I've completed the Fullstack Javascript course in GeekBrains
+                (the duration of course is 16 months) in 2022 . Now I'm working
+                as freelance to get experience and I'm open to new job
+                opportunities. My web development projects are presented in the
                 <a href="./index.html#projects"><strong>Projects</strong></a>
                 section.
               </p>
               <p class="about__content-details-para">
-                One of my current job duties is workflow automation. I program
-                in C#, more information on my CV (<a
+                One of my main job duties is workflow automation. I program in
+                C#, more information on my CV (<a
                   href="https://novosibirsk.hh.ru/resume/3ae8fb1dff0b0ffefb0039ed1f57716c6b6745"
                   target="_blank"
                   >hh.ru</a
@@ -194,8 +194,8 @@
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
             Here you'll find the personal web development projects that I've
-            created for myself during&nbsp;my&nbsp;study at GeekBrains and
-            self-study.
+            created for myself during&nbsp;my&nbsp;study and based on the
+            results of freelance team projects.
           </span>
         </h2>
 
