Add a new app (wheel of fortune)

--- a/index-ru.html
+++ b/index-ru.html
@@ -200,6 +200,46 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
+                src="./assets/jpeg/project-wheel-of-fortune.jpeg"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">
+                Wheel of Fortune (VK Mini App)
+              </h3>
+              <p class="projects__row-content-desc">
+                Fullstack JavaScript приложение с использованием React, Express, Socket.io,
+                PostgreSQL. Скоро будет полное описание... :)
+              </p>
+              <a
+                href="https://prod-app51544302-afd6d1b35314.pages-ac.vk-apps.com/index.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                style="margin-bottom: 25px"
+                target="_blank"
+                >Интернет-версия</a
+              >
+              <div class="project-details__links">
+                <a
+                  href="https://github.com/MihaMixFromGB/wheel-of-fortune-app"
+                  class="btn btn--med btn--theme-inv project-details__links-btn"
+                  target="_blank"
+                  >Frontend</a
+                >
+                <a
+                  href="https://github.com/MihaMixFromGB/wheel-of-fortune-server"
+                  class="btn btn--med btn--theme-inv project-details__links-btn"
+                  target="_blank"
+                  >Backend</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
                 src="./assets/jpeg/project-news-blog.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
