Add a short description for the wheel of fortune

--- a/index-ru.html
+++ b/index-ru.html
@@ -211,8 +211,10 @@
                 Wheel of Fortune (VK Mini App)
               </h3>
               <p class="projects__row-content-desc">
-                Fullstack JavaScript приложение с использованием React, Express, Socket.io,
-                PostgreSQL. Скоро будет полное описание... :)
+                Fullstack JavaScript приложение с анимацией вращения колеса на основе React, Express, Socket.io,
+                PostgreSQL. Если у Вас есть желание сыграть, подождите около минуты, чтобы выполнить подключение к серверу
+                (это ограничение бесплатного хостинга, где размещена серверная часть, на обработку первого запроса после простоя). 
+                Скоро будет полное описание... :)
               </p>
               <a
                 href="https://prod-app51544302-afd6d1b35314.pages-ac.vk-apps.com/index.html"
