--- a/index.html
+++ b/index.html
@@ -214,8 +214,11 @@
                 Wheel of Fortune (VK Mini App)
               </h3>
               <p class="projects__row-content-desc">
-                It's the Fullstack JavaScript App (React + Express + Socket.io +
-                PostgreSQL). A description is cooming soon... :)
+                It's the Fullstack JavaScript App with an animation of wheel's
+                rotation (React + Express + Socket.io + PostgreSQL). If you want
+                to play, please wait a minute to connect to a server (it's a
+                free server hosting's limitation for first request after an
+                inactivity period). A description is cooming soon... :)
               </p>
               <a
                 href="https://prod-app51544302-afd6d1b35314.pages-ac.vk-apps.com/index.html"
