Correct the desctiption about me

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                 team's results.
               </p>
               <p class="about__content-details-para">
-                I've completed the Fullstack Javascript course in GeekBrains
-                (the duration of course is 16 months) in 2022 . Now I'm working
-                as freelance to get experience and I'm open to new job
+                I completed the Fullstack Javascript course in GeekBrains (the
+                duration of course is 16 months) in 2022 . Now I'm working as
+                freelance to get experience and I'm open to new job
                 opportunities. My web development projects are presented in the
                 <a href="./index.html#projects"><strong>Projects</strong></a>
                 section.
