Correct the description of yourself

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
               </p>
               <p class="about__content-details-para">
                 I completed the Fullstack Javascript course in GeekBrains (the
-                duration of course is 16 months) in 2022 . Now I'm working as
-                freelance to get experience and I'm open to new job
+                course duration is 16 months) in 2022 . Now I'm working as a
+                freelancer to get experience and I'm open to new job
                 opportunities. My web development projects are presented in the
                 <a href="./index.html#projects"><strong>Projects</strong></a>
                 section.
