fix the personal info

--- a/index-ru.html
+++ b/index-ru.html
@@ -124,25 +124,32 @@
               <p class="about__content-details-para">
                 Привет! Я,
                 <strong>Антон Дехтерев</strong>,
-                начинающий<strong> веб разработчик </strong> 
+                <strong> веб разработчик </strong> 
                 из Новосибирска. Стремлюсь стать частью профессиональной и 
                 дружной команды веб&nbsp;разработчиков, в которой смог бы постоянно развивать свои 
                 профессиональные навыки для достижения высоких командных результатов.
               </p>
               <p class="about__content-details-para">
                 В 2022 году завершил обучение по программе Fullstack Javascript в GeekBrains 
-                (длительность программы - 16 месяцев). В настоящее время для получения опыта работаю на фрилансе и 
-                открыт для предложений о работе. 
-                Мои работы по веб&nbsp;разработке представлены в разделе 
+                (длительность программы - 16 месяцев). Мои работы по веб разработке представлены в разделе 
                 <a href="./index-ru.html#projects"><strong>Проекты</strong></a>.
               </p>
               <p class="about__content-details-para">
-                На основном месте работы одним из направлений является автоматизация рабочих процессов.
-                Пишу на C#, подробнее в резюме на 
-                <a 
-                  href="https://novosibirsk.hh.ru/resume/3ae8fb1dff0b0ffefb0039ed1f57716c6b6745"
-                  target="_blank"
-                >hh.ru</a>.
+                В настоящее время работаю Fullstack разработчиком в 
+                <strong>
+                  <a 
+                    href="https://www.lunapps.ru/"
+                    target="_blank"
+                    >Студии LUNA Apps
+                  </a>
+                </strong>, разрабатываю онлайн-игры для социальной сети ВКонтакте (VK Mini Apps).
+              </p>
+              <p class="about__content-details-para">
+                Мой профиль в LinkedIn - 
+                <a href="https://www.linkedin.com/in/adehterev/" alt="linkedin"
+                  >https://www.linkedin.com/in/adehterev/</a
+                >
+                или Вы может отправить мне письмо, заполнив форму в раздел Контакты.
               </p>
             </div>
             <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
@@ -158,14 +165,12 @@
               <div class="skills__skill">Tailwind</div>
               <div class="skills__skill">JavaScript</div>
               <div class="skills__skill">TypeScript</div>
-              <div class="skills__skill">Vue</div>
               <div class="skills__skill">React</div>
               <div class="skills__skill">Redux (RTK)</div>
               <div class="skills__skill">GIT</div>
               <div class="skills__skill">GitHub</div>
               <div class="skills__skill">Webpack</div>
-              <div class="skills__skill">MSSQL</div>
-              <div class="skills__skill">Firebase</div>
+              <div class="skills__skill">PostgreSQL</div>
               <div class="skills__skill">Node.js</div>
               <div class="skills__skill">Nest</div>
               <div class="skills__skill">Express</div>
@@ -174,7 +179,6 @@
               <div class="skills__skill">Swagger</div>
               <div class="skills__skill">Jest (unit test)</div>
               <div class="skills__skill">Nx (build system)</div>
-              <div class="skills__skill">C#</div>
               <div class="skills__skill">VBA</div>
               <div class="skills__skill">Figma</div>
               <div class="skills__skill">VSCode</div>
