--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <h3 class="about__content-title">Get to know me!</h3>
             <div class="about__content-details">
               <p class="about__content-details-para">
-                I'm <strong>a Junior Web Developer</strong>
+                I'm <strong>a Web Developer</strong>
                 from Novosibirsk. I wanna be a member of a&nbsp;professional and
                 friendly web development team, that&nbsp;I&nbsp;could
                 continuously develop my professional skills to archieve high
@@ -133,19 +133,28 @@
               </p>
               <p class="about__content-details-para">
                 I completed the Fullstack Javascript course in GeekBrains (the
-                course duration is 16 months) in 2022 . Now I'm working as a
-                freelancer to get experience and I'm open to new job
-                opportunities. My web development projects are presented in the
+                course duration is 16 months) in 2022. My personal web
+                development projects are presented in the
                 <a href="./index.html#projects"><strong>Projects</strong></a>
                 section.
               </p>
               <p class="about__content-details-para">
-                One of my main job duties is workflow automation. I program in
-                C#, more information on my CV (<a
-                  href="https://novosibirsk.hh.ru/resume/3ae8fb1dff0b0ffefb0039ed1f57716c6b6745"
-                  target="_blank"
-                  >hh.ru</a
-                >).
+                Now I'm working as a Fullstack Developer in
+                <strong>
+                  <a href="https://www.lunapps.ru/" target="_blank"
+                    >LUNA Apps Studio
+                  </a>
+                </strong>
+                and developing online games for a social network service named
+                VK (VK Mini Apps).
+              </p>
+              <p class="about__content-details-para">
+                My LinkedIn profile is
+                <a href="https://www.linkedin.com/in/adehterev/" alt="linkedin"
+                  >https://www.linkedin.com/in/adehterev/</a
+                >
+                or you can send me an email by filling out the form in the
+                Contact section.
               </p>
             </div>
             <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
@@ -161,14 +170,12 @@
               <div class="skills__skill">Tailwind</div>
               <div class="skills__skill">JavaScript</div>
               <div class="skills__skill">TypeScript</div>
-              <div class="skills__skill">Vue</div>
               <div class="skills__skill">React</div>
               <div class="skills__skill">Redux (RTK)</div>
               <div class="skills__skill">GIT</div>
               <div class="skills__skill">GitHub</div>
               <div class="skills__skill">Webpack</div>
-              <div class="skills__skill">MSSQL</div>
-              <div class="skills__skill">Firebase</div>
+              <div class="skills__skill">PostgreSQL</div>
               <div class="skills__skill">Node.js</div>
               <div class="skills__skill">Nest</div>
               <div class="skills__skill">Express</div>
@@ -177,7 +184,6 @@
               <div class="skills__skill">Swagger</div>
               <div class="skills__skill">Jest (unit test)</div>
               <div class="skills__skill">Nx (build system)</div>
-              <div class="skills__skill">C#</div>
               <div class="skills__skill">VBA</div>
               <div class="skills__skill">Figma</div>
               <div class="skills__skill">VSCode</div>
