fix english gramma

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                 team's results.
               </p>
               <p class="about__content-details-para">
-                I completed the Fullstack Javascript course in GeekBrains (the
-                course duration is 16 months) in 2022. My personal web
+                I've completed the Fullstack Javascript course in GeekBrains
+                (the course duration is 16 months) in 2022. My personal web
                 development projects are presented in the
                 <a href="./index.html#projects"><strong>Projects</strong></a>
                 section.
