--- a/index-ru.html
+++ b/index-ru.html
@@ -135,17 +135,27 @@
                 <a href="./index-ru.html#projects"><strong>Проекты</strong></a>.
               </p>
               <p class="about__content-details-para">
-                В настоящее время работаю Fullstack разработчиком в 
+                С июля 2022 по август 2023 работал Fullstack разработчиком в 
                 <strong>
                   <a 
                     href="https://www.lunapps.ru/"
                     target="_blank"
                     >Студии LUNA Apps
                   </a>
-                </strong>, разрабатываю онлайн-игры для социальной сети ВКонтакте (VK Mini Apps).
+                </strong>, разрабатывал онлайн-игры для социальной сети ВКонтакте (VK Mini Apps).
               </p>
               <p class="about__content-details-para">
-                Мой профиль в LinkedIn - 
+                В настоящее время работаю Frontend разработчиком в 
+                <strong>
+                  <a 
+                    href="https://www.sm117.ru/"
+                    target="_blank"
+                    >интернет-провайдере Сибирский Медведь
+                  </a>
+                </strong>, сопровождаю и развиваю мобильные и веб приложения для клиентов (личный кабинет абонента, система контроля доступа и видеонаблюдения).
+              </p>
+              <p class="about__content-details-para">
+                Мой профиль в <strong>LinkedIn</strong> - 
                 <a href="https://www.linkedin.com/in/adehterev/" alt="linkedin"
                   >https://www.linkedin.com/in/adehterev/</a
                 >
