--- a/index.html
+++ b/index.html
@@ -139,17 +139,28 @@
                 section.
               </p>
               <p class="about__content-details-para">
-                Now I'm working as a Fullstack Developer in
+                From July 2022 to August 2023 I've been working as a Fullstack
+                Developer in
                 <strong>
                   <a href="https://www.lunapps.ru/" target="_blank"
                     >LUNA Apps Studio
                   </a>
                 </strong>
-                and developing online games for a social network service named
+                and developing online games for a social network service called
                 VK (VK Mini Apps).
               </p>
               <p class="about__content-details-para">
-                My LinkedIn profile is
+                Now I'm working as a Frontend Developer in
+                <strong>
+                  <a href="https://www.lunapps.ru/" target="_blank"
+                    >Siberian Bear (Internet Service Provider)
+                  </a>
+                </strong>
+                and developing mobile and web apps for our customers (Private
+                Account of Customer, App for access control and CCTV).
+              </p>
+              <p class="about__content-details-para">
+                <strong>My LinkedIn profile</strong> is
                 <a href="https://www.linkedin.com/in/adehterev/" alt="linkedin"
                   >https://www.linkedin.com/in/adehterev/</a
                 >
