fix the website for sm

--- a/index-ru.html
+++ b/index-ru.html
@@ -148,7 +148,7 @@
                 В настоящее время работаю Frontend разработчиком в 
                 <strong>
                   <a 
-                    href="https://www.sm117.ru/"
+                    href="https://sm117.ru/"
                     target="_blank"
                     >интернет-провайдере Сибирский Медведь
                   </a>
