--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               <p class="about__content-details-para">
                 Now I'm working as a Frontend Developer in
                 <strong>
-                  <a href="https://www.lunapps.ru/" target="_blank"
+                  <a href="https://sm117.ru/" target="_blank"
                     >Siberian Bear (Internet Service Provider)
                   </a>
                 </strong>
